--- a/App.config
+++ b/App.config
@@ -115,6 +115,9 @@
             <setting name="language" serializeAs="String">
                 <value>ko_KR</value>
             </setting>
+            <setting name="picture_folder_uri" serializeAs="String">
+                <value>pictures</value>
+            </setting>
         </pmis.Properties.Settings>
         <db_test.Properties.Settings>
             <setting name="pmis_api_url" serializeAs="String">
