--- a/archive2.csproj
+++ b/archive2.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{017C392C-5871-4E1C-B65E-DE8B3119BB9C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>archive2</RootNamespace>
-    <AssemblyName>archive2</AssemblyName>
+    <RootNamespace>pmis</RootNamespace>
+    <AssemblyName>archive</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>resources\sangah_logo_64.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -45,6 +48,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\archive\lib\System.Data.SQLite.dll</HintPath>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -115,12 +119,19 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EmbeddedResource Include="i18n\en_US.resx" />
-    <EmbeddedResource Include="i18n\ko_KR.resx" />
+    <EmbeddedResource Include="i18n\en_US.resx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="i18n\ko_KR.resx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <Content Include="data\archive.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -131,13 +142,37 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="lib\Newtonsoft.Json.dll" />
-    <Content Include="lib\System.Data.SQLite.dll" />
-    <Content Include="register.import.sqlite.sql" />
-    <Content Include="register.load.sqlite.sql" />
-    <Content Include="review.import.sqlite.sql" />
-    <Content Include="review.load.sqlite.sql" />
-    <Content Include="setup.sqlite.sql" />
+    <Content Include="etc\edms_export.py" />
+    <Resource Include="etc\options_queries.txt" />
+    <Resource Include="resources\kspmis_logo.png" />
+    <Resource Include="resources\sangah-logo-2.png" />
+    <Resource Include="resources\sangah-logo.png" />
+    <Resource Include="resources\sangah_logo_16.ico" />
+    <Resource Include="resources\sangah_logo_64.ico" />
+    <Content Include="x64\SQLite.Interop.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="x86\SQLite.Interop.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="lib\Newtonsoft.Json.dll" />
+    <None Include="lib\System.Data.SQLite.dll" />
+    <Content Include="register.import.sqlite.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="register.load.sqlite.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="review.import.sqlite.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="review.load.sqlite.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Resource Include="sangah_logo_64.ico" />
+    <Content Include="setup.sqlite.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
