--- a/archive2.csproj
+++ b/archive2.csproj
@@ -82,6 +82,9 @@
     <Compile Include="reviewinfo\ReviewInfo.cs" />
     <Compile Include="reviewinfo\ReviewInfoDataService.cs" />
     <Compile Include="reviewinfo\ReviewInfoPresenter.cs" />
+    <Compile Include="SettingWindow.xaml.cs">
+      <DependentUpon>SettingWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Settings.cs" />
     <Compile Include="SQLiteDAOService.cs" />
     <Page Include="MainWindow.xaml">
@@ -101,6 +104,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SettingWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PicturePresenter.cs" />
