--- a/App.config
+++ b/App.config
@@ -363,6 +363,19 @@
       <setting name="picture_folder_uri" serializeAs="String">
         <value>pictures</value>
       </setting>
+      <setting name="archive_types" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>Workflow</string>
+            <string>Picture</string>
+            <string>Issue</string>
+            <string>Risk</string>
+            <string>Contract</string>
+            <string>Register</string>
+          </ArrayOfString>
+        </value>
+      </setting>
     </pmis.Properties.Settings>
     <archive2.Properties.Settings>
       <setting name="Setting" serializeAs="String">
