added request pmis token for data import

--- a/App.config
+++ b/App.config
@@ -14,11 +14,8 @@
   </startup>
   <userSettings>
     <pmis.Properties.Settings>
-      <setting name="Setting" serializeAs="String">
-        <value>test</value>
-      </setting>
       <setting name="pmis_api_url" serializeAs="String">
-        <value>http://dev.sangah.com</value>
+        <value>https://pmis.sangah.com</value>
       </setting>
       <setting name="pmis_project_code" serializeAs="String">
         <value>GLB_PMIS</value>
